fixed menu overflow

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -13,7 +13,6 @@ html, body {
 	height: 100%;
 	color: #FFF;
 	font-size: 16px;
-	overflow: hidden;
 	text-align: center;
 	background: #1B1B1B;
 }
